# Peanut-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProject.bat  Peanut_Engine.sln  README.md  premake5.lua
Peanut_Engine/: Peanut_Engine.vcxproj  Peanut_Engine.vcxproj.filters
Peanut_Engine/src/: Peanut_Engine.h  pepch.cpp  pepch.h
Peanut_Engine/src/Peanut/: Application.cpp  Application.h  Core.h  Entrypoint.h  KeyboardCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCode.h  Window.h
Peanut_Engine/src/Peanut/Event/: Event.h  KeyEvent.h  MouseEvent.h
Peanut_Engine/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Sandbox/: Sandbox.vcxproj
Sandbox/src/: SandboxApp.cpp
engine/: CMakeLists.txt
engine/src/_generated_/reflection/: all_reflection.h  component.reflection.gen.h  game_object.reflection.gen.h  level.reflection.gen.h  world.reflection.gen.h
engine/src/_generated_/serializer/: all_serializer.h  all_serializer.ipp  component.serializer.gen.h  game_object.serializer.gen.h  level.serializer.gen.h  world.serializer.gen.h
engine/src/reflection_parser/: CMakeLists.txt  main.cpp
engine/src/reflection_parser/common/: namespace.h  precompiled.h  schema_module.h
engine/src/reflection_parser/cursor/: cursor_type.cpp  cursor_type.h  cursor_wapper.cpp  cursor_wapper.h
engine/src/reflection_parser/generator/: generator.cpp  generator.h  reflection_generator.cpp  reflection_generator.h  serializer_generator.cpp  serializer_generator.h
engine/src/reflection_parser/language_types/: class.cpp  field.cpp  meta_class.cpp  meta_class.h  meta_enum.cpp  meta_enum.h  meta_field.cpp  meta_field.h  meta_function.cpp  meta_function.h  meta_struct.h  meta_type.cpp  meta_type.h
engine/src/reflection_parser/meta/: meta_data.cpp  meta_data.h  meta_data_config.h  meta_utils.cpp  meta_utils.h
engine/src/reflection_parser/parser/: parser.cpp  parser.h
engine/src/reflection_parser/template/: allReflectionTempl.mustache  allSerializer.h.mustache  allSerializer.ipp.mustache  commonReflectionTempl.mustache  commonSerializerGenFile.mustache
engine/src/reflection_parser/template_manager/: template_manager.cpp  template_manager.h
engine/src/runtime/: CMakeLists.txt  engine.cc  engine.h
engine/src/runtime/Event/: ApplicationEvent.h  Event.h  MouseEvent.h
engine/src/runtime/core/base/: keycode.h  logger.h  marco.h  mouse_code.h
engine/src/runtime/core/context/: runtime_context.cc  runtime_context.h
engine/src/runtime/core/event/: event.h  key_event.h  mouse_event.h  window.h  window_event.h
engine/src/runtime/core/framework/component/: component.h  tickable.h
engine/src/runtime/core/framework/component/mesh_component/: mesh_component.h
engine/src/runtime/core/framework/game_object/: game_object.h
engine/src/runtime/core/framework/level/: level.h
engine/src/runtime/core/framework/world/: world.h  world_manager.h
engine/src/runtime/core/log/: peanut_log.cc  peanut_log.cpp  peanut_log.h
engine/src/runtime/core/reflection/: marcos.h  reflection_core.cc  reflection_core.h
engine/src/runtime/core/serialize/: Serializer.h  serializer.cc
engine/src/runtime/functions/assets/: asset_manager.cc  asset_manager.h  mesh.cc  mesh.h
engine/src/runtime/functions/file/: file_helper.cc  file_helper.h
engine/src/runtime/functions/render/: render_data.h  render_pass.cc  render_pass.h  render_pass_base.h  render_resources.h  render_scene.h  render_system.cc  render_system.h  render_utils.h  shader_manager.cc  shader_manager.h
engine/src/runtime/functions/render/render_pass/: env_map_compute_pass.cc  env_map_compute_pass.cpp  env_map_compute_pass.h  main_render_pass.cc  main_render_pass.cpp  main_render_pass.h  render_pass_base.cc  render_pass_base.h
engine/src/runtime/functions/rhi/: rhi.h
engine/src/runtime/functions/rhi/vulkan/: vulkan_rhi.cc  vulkan_rhi.h
engine/src/runtime/functions/window/: window.h  window_system.cc  window_system.h
engine/src/runtime/utils/: process_utils.h  string_utils.h
engine/src/shaders/: CMakeLists.txt
engine/src/shaders/glsl/: brdf_lut.comp  color_grading.frag  deferred_light.frag  deferred_light.vert  equirect2cube.comp  equirect2cube_cs.glsl  forward_lighting.frag  irmap_cs.glsl  irradiance_env_map.comp  mesh.vert  mesh_gbuffer.frag  post_process.vs  prefiltered_env_map.comp  skybox.frag  skybox.vert  tonemap.fs
engine/src/shaders/glsl/include/: constants.h  hdr.h  host_device_structs.h  pbr.h  utils.inl
engine/src/test/: CMakeLists.txt  test_engine.cc  test_hello.cc  test_window_system.cc
